--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
 </head>
 <body ng-app="jukufrontApp">
@@ -111,7 +110,6 @@
 <script src="bower_components/json3/lib/json3.js"></script>
 <![endif]-->
 <!-- endbuild -->
-
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -131,9 +129,10 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/angular-mocks/angular-mocks.js"></script>
+<script src="bower_components/angular-scenario/angular-scenario.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
-
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
@@ -142,6 +141,7 @@
 <script src="scripts/controllers/lahHakemukset.js"></script>
 <script src="scripts/services/dataApi.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
+<script src="scripts/services/mockbackendApi.js"></script>
 <!-- endbuild -->
 </body>
 </html>
