--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js">
-<<<<<<< HEAD
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -13,95 +12,97 @@
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
 </head>
 <body ng-app="jukufrontApp">
 <!--[if lt IE 7]>
-=======
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
-    <!-- endbuild -->
-  </head>
-  <body ng-app="jukufrontApp">
-    <!--[if lt IE 7]>
->>>>>>> 8ee51b46d8d25b0ea892be354b0571c89af22806
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.</p>
 <![endif]-->
-    <!-- Add your site or application content here -->
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">JUKU</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <a ng-href="#/l/hakemukset">Hakemukset</a>
-            </li>
+<!-- Add your site or application content here -->
+<div class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">JUKU</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a ng-href="#/l/hakemukset">Hakemukset</a>
+        </li>
+        <li>
+          <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
+        </li>
+        <li>
+          <a ng-href="#/l/hakemus">Hakemus</a>
+        </li>
+        <li>
+          <a ng-href="#/main">Main</a>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
+          <ul class="dropdown-menu">
             <li>
-              <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
-            </li>
-            <li>
-              <a ng-href="#/l/hakemus">Hakemus</a>
-            </li>
-            <li>
-              <a ng-href="#/main">Main</a>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a href="#">Omat Tiedot</a>
-                </li>
-              </ul>
+              <a href="#">Omat Tiedot</a>
             </li>
           </ul>
-        </div>
-        <div ng-view=""></div>
-      </div>
-      <div id="footer" xclass="container-fluid">
-        <div class="container">
+        </li>
+      </ul>
+    </div>
+    <div ng-view=""></div>
+  </div>
+  <div id="footer" xclass="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-md-8">
-              <div class="row">
-                <div class="col-md-6">
-                  <address><strong>Taitorakennerekisteri</strong><p>taitorakennerekisteri@liikennevirasto.fi</p><p>+358 123 123 123</p><p>PL 123</p><p>001230 Helsinki</p></address>
-                </div>
-                <div class="col-md-6">
-                  <address><p>Liikennevirasto</p><p>+358 123 123 123</p><p>PL 123</p><p>001230 Helsinki</p><p>Käyntiosoite: xxxxx xx, xxxx</p></address>
-                </div>
-              </div>
+            <div class="col-md-6">
+              <address><strong>Taitorakennerekisteri</strong>
+
+                <p>taitorakennerekisteri@liikennevirasto.fi</p>
+
+                <p>+358 123 123 123</p>
+
+                <p>PL 123</p>
+
+                <p>001230 Helsinki</p></address>
             </div>
-            <div class="col-md-4">
-              <p>TODO: Lähetä palautetta palvelusta</p>
-              <p>TODO: Palautelomake</p>
-              <p>TODO: Muutokset käyttäjätietoihin, uudet tunnukset</p>
-              <p>TODO: Yhteydenottolomake</p>
-              <p>TODO: avataan Pinegrowssa tyyleineen</p>
+            <div class="col-md-6">
+              <address><p>Liikennevirasto</p>
+
+                <p>+358 123 123 123</p>
+
+                <p>PL 123</p>
+
+                <p>001230 Helsinki</p>
+
+                <p>Käyntiosoite: xxxxx xx, xxxx</p></address>
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <p>TODO: Lähetä palautetta palvelusta</p>
+
+          <p>TODO: Palautelomake</p>
+
+          <p>TODO: Muutokset käyttäjätietoihin, uudet tunnukset</p>
+
+          <p>TODO: Yhteydenottolomake</p>
+
+          <p>TODO: avataan Pinegrowssa tyyleineen</p>
+        </div>
       </div>
     </div>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
+  </div>
+</div>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
@@ -113,16 +114,14 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
   ga('create', 'UA-XXXXX-X');
   ga('send', 'pageview');
 </script>
-    <!-- build:js(.) scripts/oldieshim.js -->
-    <!--[if lt IE 9]>
+<!-- build:js(.) scripts/oldieshim.js -->
+<!--[if lt IE 9]>
 <script src="bower_components/es5-shim/es5-shim.js"></script>
 <script src="bower_components/json3/lib/json3.js"></script>
 <![endif]-->
-<<<<<<< HEAD
 <!-- endbuild -->
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
@@ -159,38 +158,3 @@
 <!-- endbuild -->
 </body>
 </html>
-=======
-    <!-- endbuild -->
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
-    <script src="scripts/controllers/lahHakemus.js"></script>
-    <script src="scripts/controllers/lahHakemukset.js"></script>
-    <script src="scripts/services/dataApi.js"></script>
-    <script src="scripts/services/thingsAsPromised.js"></script>
-    <!-- endbuild -->
-  </body>
-</html>
->>>>>>> 8ee51b46d8d25b0ea892be354b0571c89af22806
