--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="styles/main.css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
+  <link rel="stylesheet" href="styles/bootstrap.css">
+  <link rel="stylesheet" href="styles/navbar.css">
 </head>
 <body ng-app="jukufrontApp">
 <!--[if lt IE 7]>
@@ -21,8 +23,8 @@
   your browser</a> to improve your experience.</p>
 <![endif]-->
 <!-- Add your site or application content here -->
-<div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+<div class="container">
+  <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
@@ -31,38 +33,37 @@
       </button>
       <a class="navbar-brand" href="#">JUKU</a>
     </div>
-    <div class="collapse navbar-collapse">
+    <div class="navbar-collapse" collapse>
       <ul class="nav navbar-nav">
         <li class="active">
           <a ng-href="#/l/hakemukset">Hakemukset</a>
         </li>
-        <li>
-          <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
-        </li>
-        <li>
-          <a ng-href="#/l/hakemus">Hakemus</a>
-        </li>
-        <li>
-          <a ng-href="#/main">Main</a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="#">Omat Tiedot</a>
-            </li>
-          </ul>
-        </li>
+        <!--
+                <li>
+                  <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
+                </li>
+                <li>
+                  <a ng-href="#/l/hakemus">Hakemus</a>
+                </li>
+                <li>
+                  <a ng-href="#/main">Main</a>
+                </li>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="#">Omat Tiedot</a>
+                    </li>
+                  </ul>
+                </li>
+        -->
       </ul>
     </div>
     <div ng-view=""></div>
-  </div>
-  <div id="footer" xclass="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <div class="row">
-            <div class="col-md-6">
+
+    <div id="footer">
+      <div class="col-md-4">
               <address><strong>Taitorakennerekisteri</strong>
 
                 <p>taitorakennerekisteri@liikennevirasto.fi</p>
@@ -72,8 +73,8 @@
                 <p>PL 123</p>
 
                 <p>001230 Helsinki</p></address>
-            </div>
-            <div class="col-md-6">
+      </div>
+      <div class="col-md-4">
               <address><p>Liikennevirasto</p>
 
                 <p>+358 123 123 123</p>
@@ -83,10 +84,8 @@
                 <p>001230 Helsinki</p>
 
                 <p>Käyntiosoite: xxxxx xx, xxxx</p></address>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
+      </div>
+      <div class="col-md-4">
           <p>TODO: Lähetä palautetta palvelusta</p>
 
           <p>TODO: Palautelomake</p>
@@ -96,7 +95,6 @@
           <p>TODO: Yhteydenottolomake</p>
 
           <p>TODO: avataan Pinegrowssa tyyleineen</p>
-        </div>
       </div>
     </div>
   </div>
