grunt-connect, hakemuskauden hallinta, toimiva grunt kantayhteystesti/konfiguraatio

--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,7 @@
 <script src="scripts/controllers/lahHakemukset.js"></script>
 <script src="scripts/controllers/kasHakemukset.js"></script>
 <script src="scripts/controllers/kasHakemus.js"></script>
+<script src="scripts/controllers/kasHakemuskaudenHallinta.js"></script>
 <script src="scripts/services/dataApi.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
 <script src="scripts/services/mockbackendApi.js"></script>
