--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
   <link rel="stylesheet" href="styles/bootstrap.css" />
-  <link rel="stylesheet" href="styles/navbar.css" />
+  <link rel="stylesheet" href="styles/juku.css" />
 </head>
 <body ng-app="jukufrontApp">
 <!--[if lt IE 7]>
@@ -125,6 +125,9 @@
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
+<script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+<script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
+<script src="bower_components/angular-elastic/elastic.js"></script>
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
 <script src="bower_components/angular-scenario/angular-scenario.js"></script>
 <!-- endbower -->
