--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div class="container">
-  <div ng-controller="NaviCtrl">
+  <div ng-controller="UtilCtrl">
     <div class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -128,6 +128,7 @@
 <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
 <script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
 <script src="bower_components/angular-scenario/angular-scenario.js"></script>
 <!-- endbower -->
@@ -137,7 +138,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/lahHakemus.js"></script>
-<script src="scripts/controllers/navi.js"></script>
+<script src="scripts/controllers/utils.js"></script>
 <script src="scripts/controllers/lahHakemukset.js"></script>
 <script src="scripts/controllers/kasHakemukset.js"></script>
 <script src="scripts/controllers/kasHakemus.js"></script>
