Suunnittelunäkymä, Karma korjattu, tyylejä/kantarajapintoja muutettu

--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,7 @@
 <script src="scripts/controllers/kasHakemukset.js"></script>
 <script src="scripts/controllers/kasHakemus.js"></script>
 <script src="scripts/controllers/kasHakemuskaudenHallinta.js"></script>
+<script src="scripts/controllers/kasSuunnittelu.js"></script>
 <script src="scripts/services/dataApi.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
 <script src="scripts/services/mockbackendApi.js"></script>
