--- a/app/index.html
+++ b/app/index.html
@@ -8,81 +8,89 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/main.css"/>
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
-  <link rel="stylesheet" href="styles/bootstrap.css" />
-  <link rel="stylesheet" href="styles/juku.css" />
+  <link rel="stylesheet" href="styles/bootstrap.css"/>
+  <link rel="stylesheet" href="styles/juku.css"/>
 </head>
-<body ng-app="jukufrontApp">
-<!--[if lt IE 7]>
-<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-  your browser</a> to improve your experience.</p>
-<![endif]-->
-<!-- Add your site or application content here -->
-<div class="container">
-  <div ng-controller="UtilCtrl">
-    <div class="navbar navbar-default" role="navigation">
+<body ng-app="jukufrontApp" class="bodypadding">
+<div ng-controller="UtilCtrl">
+  <div class="navbar-default navbar navbar-fixed-top" role="navigation">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">JUKU</a>
+        <a class="navbar-brand" href="#">
+          <img src="https://dl.dropboxusercontent.com/u/1941043/JUKU-logo.png" class="logoalign">
+        </a>
       </div>
-      <div class="navbar-collapse" collapse>
+      <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
         <ul class="nav navbar-nav">
-          <li ng-class="{active:isActive('/l/hakemukset')}">
-            <a ng-href="#/l/hakemukset">Hakemukset</a>
+          <li class="headertxt" ng-class="{active:isActive('/l/hakemukset')}">
+            <a href="#/l/hakemukset" ng-href="#/l/hakemukset" class="navbartxt">Hakemukset</a>
           </li>
-          <li ng-class="{active:isActive('/k/hakemukset')}">
-            <a ng-href="#/k/hakemukset">Käsittelijän hakemukset</a>
+          <li class="headertxt" ng-class="{active:isActive('/k/hakemukset')}">
+            <a href="#/k/hakemukset" ng-href="#/k/hakemukset" class="navbartxt">Käsittelijän hakemukset</a>
           </li>
           <!--
-                  <li>
-                    <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
-                  </li>
-                  <li>
-                    <a ng-href="#/l/hakemus">Hakemus</a>
-                  </li>
-                  <li>
-                    <a ng-href="#/main">Main</a>
-                  </li>
+                <li>
+                  <a ng-href="#/l/tietoajukusta">Tietoa JUKUsta</a>
+                </li>
+                <li>
+                  <a ng-href="#/l/hakemus">Hakemus</a>
+                </li>
+                <li>
+                  <a ng-href="#/main">Main</a>
+                </li>
 
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a href="#">Omat Tiedot</a>
-                      </li>
-                    </ul>
-                  </li>
-          -->
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tiina Tarkastaja <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="#">Omat Tiedot</a>
+                    </li>
+                  </ul>
+                </li>
+        -->
         </ul>
       </div>
     </div>
-    <div ng-view=""></div>
+  </div>
+</div>
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+  your browser</a> to improve your experience.</p>
+<![endif]-->
+<!-- Add your site or application content here -->
+<div ng-view=""></div>
+<div id="footer">
+  <div class="container">
     <div class="footer">
       <div class="col-md-2">
-        <h2>JUKU</h2>
+        <img src="https://dl.dropboxusercontent.com/u/1941043/JUKU-logo.png" class="footerlogo">
       </div>
       <div class="col-md-2">
-        <h5>Yhteyshenkilöt</h5>
+        <h5 class="navbartxt">Yhteystiedot</h5>
       </div>
       <div class="col-md-4">
-        <h5>Anna palautetta</h5>
+        <h5 class="navbartxt">Anna palautetta</h5>
       </div>
       <div class="col-md-4">
-        <h5>Liikennevirasto</h5>
+        <h5 class="navbartxt r-align">Liikennevirasto.fi</h5>
       </div>
     </div>
   </div>
 </div>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<script src="//www.google-analytics.com/analytics.js" async=""></script>
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
