--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <img src="https://dl.dropboxusercontent.com/u/1941043/JUKU-logo.png" class="logoalign">
+          <img src="images/JUKU-logo.png" class="logoalign">
         </a>
       </div>
       <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
@@ -74,7 +74,7 @@
   <div class="container">
     <div class="footer">
       <div class="col-md-2">
-        <img src="https://dl.dropboxusercontent.com/u/1941043/JUKU-logo.png" class="footerlogo">
+        <img src="images/JUKU-logo.png" class="footerlogo">
       </div>
       <div class="col-md-2">
         <h5 class="navbartxt">Yhteystiedot</h5>
