Jussin tyylittelymuutokset otettu käyttöön

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
   <!-- endbuild -->
   <link rel="stylesheet" href="styles/bootstrap.css"/>
+  <link href="styles/jukubootstrap.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="styles/juku.css"/>
 </head>
 <body ng-app="jukufrontApp" class="bodypadding">
