--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
       <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
         <ul class="nav navbar-nav">
           <li class="headertxt" ng-class="{active:isActive('/l/hakemukset')}">
-            <a href="#/l/hakemukset" ng-href="#/l/hakemukset" class="navbartxt">Hakemukset</a>
+            <a href="#/l/hakemukset" ng-href="#/l/hakemukset" class="navbartxt">Omat hakemukset</a>
           </li>
           <li class="headertxt" ng-class="{active:isActive('/k/hakemukset')}">
-            <a href="#/k/hakemukset" ng-href="#/k/hakemukset" class="navbartxt">Käsittelijän hakemukset</a>
+            <a href="#/k/hakemukset" ng-href="#/k/hakemukset" class="navbartxt">Hakemukset</a>
           </li>
           </ul>
         <ul class="nav navbar-nav pull-right">
