--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="styles/juku.css"/>
 </head>
 <body ng-app="jukufrontApp" class="bodypadding">
-<div ng-controller="UtilCtrl">
+<div ng-controller="PaanayttoCtrl">
   <div class="navbar-default navbar navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -149,14 +149,14 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
-<script src="scripts/controllers/lahHakemus.js"></script>
-<script src="scripts/controllers/utils.js"></script>
-<script src="scripts/controllers/lahHakemukset.js"></script>
-<script src="scripts/controllers/kasHakemukset.js"></script>
-<script src="scripts/controllers/kasHakemus.js"></script>
-<script src="scripts/controllers/kasHakemuskaudenHallinta.js"></script>
-<script src="scripts/controllers/kasPaatos.js"></script>
-<script src="scripts/controllers/kasSuunnittelu.js"></script>
+<script src="scripts/controllers/hakija/hakemus.js"></script>
+<script src="scripts/controllers/yleinen/paanaytto.js"></script>
+<script src="scripts/controllers/hakija/hakemukset.js"></script>
+<script src="scripts/controllers/kasittelija/hakemukset.js"></script>
+<script src="scripts/controllers/kasittelija/hakemus.js"></script>
+<script src="scripts/controllers/kasittelija/hakemuskaudenHallinta.js"></script>
+<script src="scripts/controllers/kasittelija/paatos.js"></script>
+<script src="scripts/controllers/kasittelija/suunnittelu.js"></script>
 <script src="scripts/services/avustuskohde.js"></script>
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
