--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,7 @@
 <script src="scripts/services/organisaatio.js"></script>
 <script src="scripts/services/suunnittelu.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
-<script src="scripts/handlers/virhetapahtumat.js"></script>
+<script src="scripts/services/status.js"></script>
 <!-- endbuild -->
 </body>
 </html>
