Hakemukseen lisättiin kenttien validointi ja validointitekstit

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
 <script src="bower_components/angular-smart-table/dist/smart-table.min.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-toastr/dist/angular-toastr.js"></script>
+<script src="bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
