--- a/app/index.html
+++ b/app/index.html
@@ -149,9 +149,11 @@
 <script src="bower_components/angular-toastr/dist/angular-toastr.js"></script>
 <script src="bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
 <script src="bower_components/angular-ui-utils/validate.js"></script>
+<script src="bower_components/ng-currency/dist/ng-currency.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="bower_components/angular-i18n/angular-locale_fi-fi.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
