Direktiivi eroitettu omaan tiedostoon

--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,7 @@
 <script src="scripts/controllers/kasittelija/hakemuskaudenHallinta.js"></script>
 <script src="scripts/controllers/kasittelija/paatos.js"></script>
 <script src="scripts/controllers/kasittelija/suunnittelu.js"></script>
+<script src="scripts/directives/hakemuslabel.js"></script>
 <script src="scripts/services/avustuskohde.js"></script>
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
