Suhteellinen polku api-palveluihin, jotta voidaan siirtää livijuku:lle juku-hakemiston alle

--- a/app/harri.html
+++ b/app/harri.html
@@ -14,7 +14,7 @@
       document.cookie = name + "=" + value + expires + "; path=/";
     }
     createCookie('oam-remote-user', 'harri', 1);
-    window.location.replace("/");
+    window.location.replace(".");
   </script>
 </head>
 <body>
