--- a/app/katri.html
+++ b/app/katri.html
@@ -14,7 +14,7 @@
       document.cookie = name + "=" + value + expires + "; path=/";
     }
     createCookie('oam-remote-user', 'katri', 1);
-    window.location.replace("/");
+    window.location.replace(".");
   </script>
 </head>
 <body>
