LIVIJUKU-144: Tooltip:t/vertailuarvot lisätty

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/yhteinen/hakemus.js"></script>
+<script src="scripts/controllers/yhteinen/maksatushakemus.js"></script>
 <script src="scripts/controllers/yhteinen/paanaytto.js"></script>
 <script src="scripts/controllers/hakija/hakemukset.js"></script>
 <script src="scripts/controllers/kasittelija/hakemukset.js"></script>
