LIVIJUKU-144 Maksatushakemus/käsittelijän näytöt

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
             <a href="#/l/hakemukset" ng-href="#/l/hakemukset" class="navbartxt">Omat hakemukset</a>
           </li>
           <li class="headertxt" ng-class="{active:isActive('/k/hakemukset')}">
-            <a href="#/k/hakemukset" ng-href="#/k/hakemukset" class="navbartxt">Hakemukset</a>
+            <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0" class="navbartxt">Hakemukset</a>
           </li>
           </ul>
         <ul class="nav navbar-nav pull-right">
