Hakemuskausi otettu omaksi valikoksi, layout-muutoksia

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,14 @@
       </div>
       <div style="height: auto;" class="navbar-collapse collapse in" collapse="">
         <ul class="nav navbar-nav">
-          <li class="headertxt" ng-class="{active:isActive('/l/hakemukset')}">
-            <a href="#/l/hakemukset" ng-href="#/l/hakemukset" class="navbartxt">Omat hakemukset</a>
+          <li class="headertxt" ng-class="{active:isActive('/h/hakemukset')}">
+            <a href="#/h/hakemukset" ng-href="#/h/hakemukset" class="navbartxt">Omat hakemukset</a>
           </li>
-          <li class="headertxt" ng-class="{active:isActive('/k/hakemukset')}">
-            <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0" class="navbartxt">Hakemukset</a>
+          <li class="headertxt" ng-class="{active:isActive('/k/hakemukset/AH0')}">
+            <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0" class="navbartxt">Kaikki hakemukset</a>
+          </li>
+          <li class="headertxt" ng-class="{active:isActive('/k/hakemuskaudenhallinta')}">
+            <a href="#/k/hakemuskaudenhallinta" ng-href="#/k/hakemuskaudenhallinta" class="navbartxt">Hakemuskaudet</a>
           </li>
           </ul>
         <ul class="nav navbar-nav pull-right">
