--- a/app/index.html
+++ b/app/index.html
@@ -169,6 +169,7 @@
 <script src="scripts/controllers/kasittelija/paatos.js"></script>
 <script src="scripts/controllers/kasittelija/suunnittelu.js"></script>
 <script src="scripts/directives/hakemuslabel.js"></script>
+<script src="scripts/directives/noenter.js"></script>
 <script src="scripts/services/avustuskohde.js"></script>
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
