LIVIJUKU Uusia käyttäjätunnuksia allekirjoitus ja päätöksentekijä rooleihin

--- a/app/allu.html
+++ b/app/allu.html
@@ -13,8 +13,8 @@
       else var expires = "";
       document.cookie = name + "=" + value + expires + "; path=/";
     }
-    createCookie('oam-remote-user', 'juku_kasittelija', 1);
-    createCookie('oam-groups', 'juku_kasittelija', 1);
+    createCookie('oam-remote-user', 'juku_allekirjoittaja', 1);
+    createCookie('oam-groups', 'juku_allekirjoittaja', 1);
     window.location.replace(".");
   </script>
 </head>
