--- a/app/harri.html
+++ b/app/harri.html
@@ -13,7 +13,7 @@
       else var expires = "";
       document.cookie = name + "=" + value + expires + "; path=/";
     }
-    createCookie('oam-remote-user', 'harri', 1);
+    createCookie('oam-remote-user', 'juku_hakija', 1);
     createCookie('oam-groups', 'juku_hakija', 1);
     window.location.replace(".");
   </script>
