LIVIJUKU-186:LV Angular ng-app attribuutin on oltava juurielementissä, jotta protractor testaus on mahdollista

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html ng-app="jukufrontApp" class="no-js">
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="styles/juku.css"/>
   <link rel="stylesheet" type="text/css" href="styles/angular-toastr.css"/>
 </head>
-<body ng-app="jukufrontApp" class="bodypadding" ng-cloak>
+<body class="bodypadding" ng-cloak>
 <div ng-controller="PaanayttoCtrl">
   <div class="navbar-default navbar navbar-fixed-top" role="navigation">
     <div class="container">
