LIVIJUKU-171 - Hakemusten tilat lasketaan tietokannan tietojen perusteella hakemuskauden hallintanäytöllä

--- a/app/index.html
+++ b/app/index.html
@@ -179,6 +179,7 @@
 <script src="scripts/controllers/kasittelija/suunnittelu.js"></script>
 <script src="scripts/directives/hakemuslabel.js"></script>
 <script src="scripts/directives/noenter.js"></script>
+<script src="scripts/directives/hakemussummary.js"></script>
 <script src="scripts/services/avustuskohde.js"></script>
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
