LIVIJUKU-212 Uloskirjautuminen JUKUsta

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
             <p class="navbartxt">{{user.etunimi}} {{user.sukunimi}}</p>
 
             <p class="navbartxt">{{userOrganisaatio}}</p>
+            <p class="navbartxt"><a href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">Kirjaudu ulos</a> </p>
           </li>
           <!--
                 <li>
