LIVIJUKU-215 Progress bar:n lisääminen

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -19,6 +20,7 @@
   <link href="styles/jukubootstrap.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="styles/juku.css"/>
   <link rel="stylesheet" type="text/css" href="styles/angular-toastr.css"/>
+  <link rel="stylesheet" type="text/css" href="styles/loading-bar.css"/>
 </head>
 <body class="bodypadding" ng-cloak>
 <div ng-controller="PaanayttoCtrl">
@@ -144,6 +146,7 @@
 <script src="bower_components/ng-currency/dist/ng-currency.min.js"></script>
 <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
 <script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
+<script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <!-- endbower -->
 <script src="bower_components/angular-i18n/angular-locale_fi-fi.js"></script>
 <!-- endbuild -->
@@ -161,7 +164,6 @@
 <script src="scripts/directives/hakemuslabel.js"></script>
 <script src="scripts/directives/noenter.js"></script>
 <script src="scripts/directives/hakemussummary.js"></script>
-<script src="scripts/directives/mydate.js"></script>
 <script src="scripts/services/avustuskohde.js"></script>
 <script src="scripts/services/hakemus.js"></script>
 <script src="scripts/services/hakemuskausi.js"></script>
