--- a/app/harri.html
+++ b/app/harri.html
@@ -14,7 +14,7 @@
       document.cookie = name + "=" + value + expires + "; path=/";
     }
     createCookie('oam-remote-user', 'juku_hakija', 1);
-    createCookie('oam-user-organization', 'tampere', 1);
+    createCookie('oam-user-organization', 'helsingin ka', 1);
     createCookie('oam-groups', 'juku_hakija', 1);
     window.location.replace(".");
   </script>
