LIVIJUKU-213: - hakemuksen ko. kauden avuskohteet tulee backend-palvelusta - avustuskohteiden lajien / luokkien nimet backend-palvelusta, - avustuskohteiden järjestys backend-palvelusta.
Huom! direktiivit: jku-avustusluokka-panel ja jku-avustuskohde ovat samat kuin aikaisemminkin

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
 <script src="scripts/services/suunnittelu.js"></script>
 <script src="scripts/services/thingsAsPromised.js"></script>
 <script src="scripts/services/status.js"></script>
+<script src="scripts/services/common.js"></script>
 <!-- endbuild -->
 </body>
 </html>
