IE9 FileAPI skriptin polku korjattu

--- a/app/index.html
+++ b/app/index.html
@@ -98,8 +98,8 @@
 </div>
 <script>
   FileAPI = {
-    jsPath: '/scripts/ie9/',
-    staticPath: '/scripts/ie9/'
+    jsPath: 'scripts/ie9/',
+    staticPath: 'scripts/ie9/'
     //forceLoad: true, html5: false //to debug flash in HTML5 browsers
   }
 </script>
