Testikäyttäjä-tiedostoihin päivitetty uudet HTTP header:t

--- a/app/katri.html
+++ b/app/katri.html
@@ -13,7 +13,9 @@
       else var expires = "";
       document.cookie = name + "=" + value + expires + "; path=/";
     }
-    createCookie('oam-remote-user', 'juku_kasittelija', 1);
+    createCookie('oam-remote-user', 'lxjuku_kasittelija', 1);
+    createCookie('oam-user-first-name', 'Katri', 1);
+    createCookie('oam-user-last-name', 'Testikasittelija', 1);
     createCookie('oam-user-organization', 'liikennevirasto', 1);
     createCookie('oam-groups', 'juku_kasittelija', 1);
     window.location.replace(".");
