LIVIJUKU-131 Test: Järjestelmä informoi (JUKUn sisällä) avustushakemuksen hakijaa hakemuksen käsittelyn vaiheista - Poistettu aiheettomat nimitiedot harri ja katri -html-tiedostoista.

--- a/app/harri.html
+++ b/app/harri.html
@@ -13,9 +13,7 @@
       else var expires = "";
       document.cookie = name + "=" + value + expires + "; path=/";
     }
-    createCookie('oam-remote-user', 'lxjuku_hakija', 1);
-    createCookie('oam-user-first-name', 'Harri', 1);
-    createCookie('oam-user-last-name', 'Testihakija', 1);
+    createCookie('oam-remote-user', 'juku_hakija', 1);
     createCookie('oam-user-organization', 'helsingin ka', 1);
     createCookie('oam-groups', 'juku_hakija', 1);
     window.location.replace(".");
