WIP ngRouter -> ui-router

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
     <!-- Add your site or application content here -->
     <div class="app">
-      <div ng-view=""></div>
+      <div ui-view></div>
       <juku-footer />
     </div>
 
