LIVIJUKU-427: liitteiden lisääminen korjattu flash-versiolla. Vika johtui virheestä flash-wrapperin offset-laskennassa: shim-elem.js funktio: getOffset(obj). Vika korjattiin kludgella, jossa window objektiin laitetaan jQuery, jota ko. offset laskenta käyttää oletuksena. JQueryn offset laskenta toimii paremmin kuin fallback offset -laskenta.

--- a/app/index.html
+++ b/app/index.html
@@ -19,14 +19,14 @@
     <!-- Add your site or application content here -->
     <div class="app">
       <div ui-view></div>
-      <juku-footer />
+      <juku-footer></juku-footer>
     </div>
 
     <script>
       FileAPI = {
         jsPath: 'scripts/ie9/',
         staticPath: 'scripts/ie9/'
-        //forceLoad: true, html5: false //to debug flash in HTML5 browsers
+        //forceLoad: true, html5: false, debug: true //to debug flash in HTML5 browsers
       }
     </script>
     <!--[if lt IE 9]>
