LIVIJUKU-450 Front buildi tuottaa projektin juureen tiedoston rev-manifest.json

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <!-- inject:css -->
+    <!-- endinject -->
   </head>
   <body ng-class="{'is-collapsed': $root.isCollapsed }" ng-cloak ng-controller="PaanayttoCtrl">
     <juku-header user="user"></juku-header>
@@ -33,6 +34,7 @@
     <script src="scripts/ie9/es5-shim.min.js"></script>
     <script src="scripts/ie9/json3.min.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="scripts/scripts.js"></script>
+    <!-- inject:js -->
+    <!-- endinject -->
   </body>
 </html>
