laitoin titleksi: Joukkoliikenteen rahoitus-, kustannus- ja suoritetietojen hallinta + favicon määritys

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,11 @@
 <html ng-app="jukufrontApp" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Joukkoliikenteen rahoitus-, kustannus- ja suoritetietojen hallinta</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="favicon.ico" />
     <!-- inject:css -->
     <!-- endinject -->
   </head>
