LIVIJUKU-565 - ie:n yhteensopivuusasetukset (documentmode) yritetään aina asettaa uusimpaan versioon.

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="jukufrontApp" class="no-js">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <meta charset="utf-8">
     <title>Joukkoliikenteen rahoitus-, kustannus- ja suoritetietojen hallinta</title>
     <meta name="description" content="">
