LIVIJUKU-1092 - CSP sääntöjen tiukentaminen - add ng-csp to angular

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="jukufrontApp" class="no-js">
+<html ng-app="jukufrontApp" ng-csp class="no-js">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <meta charset="utf-8">
